[gd_scene load_steps=6 format=3 uid="uid://c2c3t6jriymr6"]

[ext_resource type="Script" path="res://components/TriggerButton/TriggerButton.gd" id="1_3rl6v"]
[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_v6l20"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rpw8u"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vitk4"]
bg_color = Color(0.0627451, 0.0627451, 0.0627451, 0.439216)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_0uk5x"]

[node name="TriggerButton" type="Button"]
custom_minimum_size = Vector2(70, 70)
anchors_preset = -1
anchor_right = 0.0364583
anchor_bottom = 0.0648148
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_v6l20")
toggle_mode = true
action_mode = 0
clip_text = true
script = ExtResource("1_3rl6v")
metadata/_edit_use_anchors_ = true

[node name="Style" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_rpw8u")

[node name="Value" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vitk4")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 14
label_settings = SubResource("LabelSettings_0uk5x")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
text_overrun_behavior = 3

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="resized" from="." to="." method="_on_resized"]
